--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -29,6 +29,10 @@
             {% endblock %}
         </div>
     </div>
+    <div class="container">
+        {% block body %}
+        {% endblock %}
+    </div>
 </body>
 
 </html>
