--- a/lists/templates/powerbi.html
+++ b/lists/templates/powerbi.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 
-{% block header_text %}Power BI embed test{% endblock %}
+{% block header_text %}Power BI embed test
+{% endblock %}
 {% block form_action %}
+{% endblock %}
+{% block body %}
 <iframe title="Test_publish_to_web" width="1024" height="1060"
     src="https://app.powerbi.com/view?r=eyJrIjoiZjlmN2U0NzMtNDZmNy00ZDYzLWFjODItZTY5NDZhYzg0ZjFlIiwidCI6ImExMWQ3YTZiLTI5YWUtNDQzMi05ZDRmLTA2N2Y4OTVlYWRmMSIsImMiOjl9&pageName=ReportSection"
-    frameborder="0" allowFullScreen="true"></iframe>
+    frameborder="0" allowFullScreen="true">
+</iframe>
 {% endblock %}
